--- a/Employee-posting/index.html
+++ b/Employee-posting/index.html
@@ -768,7 +768,7 @@
         let savedJobs = new Set();
         let currentPage = 1;
         const jobsPerPage = 6;
-        const API_URL = 'http:/13.51.174.197/:3000/api';
+        const API_URL = 'http://54.145.132.159:3303/api';
 
         async function initializePage() {
             await loadJobs();
